fixed wiggle on mobile screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,8 @@
 body {
   overflow-x: hidden;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 /* Custom container applied to all bold elements except for navbar */
@@ -18,6 +20,9 @@ h1 {
 @media (max-width: 600px) {
   h1 {
     font-size: 50px;
+  }
+  .container {
+    width: 100%;
   }
 }
 
